# atriumn-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
atriumn_ai/: __init__.py  client.py  config.py  exceptions.py  models.py
atriumn_sdk_ai/: __init__.py  client.py  exceptions.py
examples/: __init__.py  extract_traits.py  recommend_model.py  run_task.py
src/atriumn_sdk/: __init__.py  client.py
src/atriumn_sdk/tasks/: __init__.py  extract_traits_document.py  extract_traits_story.py  recommend_model.py  summarize_fit.py  synthesize_identity.py  tailor_resume.py
tests/: __init__.py  test_client.py
