[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atriumn-sdk"
version = "0.1.0"
description = "Thin facade SDK for Atriumn AI API"
authors = [{name = "Atriumn Team", email = "support@atriumn.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/atriumn/atriumn-sdk-python"
Repository = "https://github.com/atriumn/atriumn-sdk-python.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["atriumn_sdk*"]